--- a/index.html
+++ b/index.html
@@ -3,176 +3,143 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Delivery Login</title>
+  <title>Delivery System Login</title>
   <style>
+    :root {
+      --dark-bg: #230903;
+      --mid-bg: #656256;
+      --accent-green: #9ebc9f;
+      --accent-tan: #d3b88c;
+      --light-bg: #f4f2f3;
+    }
+
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
       font-family: "Poppins", sans-serif;
     }
 
     body {
+      min-height: 100vh;
+      background: var(--light-bg);
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      background: linear-gradient(135deg, #230903, #656256);
     }
 
     .login-container {
-      background: #f4f2f3;
+      background: white;
       width: 90%;
       max-width: 400px;
+      border-radius: 15px;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
       padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
       text-align: center;
     }
 
-    .login-container h1 {
-      margin-bottom: 1.5rem;
-      color: #230903;
-      letter-spacing: 0.5px;
-    }
-
-    .input-group {
+    h1 {
+      color: var(--dark-bg);
       margin-bottom: 1rem;
-      text-align: left;
     }
 
-    .input-group label {
-      display: block;
-      font-weight: 500;
-      margin-bottom: 0.3rem;
-      color: #656256;
+    p {
+      color: var(--mid-bg);
+      font-size: 0.9rem;
+      margin-bottom: 1.5rem;
     }
 
-    .input-group input {
-      width: 100%;
-      padding: 0.75rem;
-      border: 1px solid #d3b88c;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      background-color: #fff;
-      color: #230903;
-    }
-
-    .role-select {
-      display: flex;
-      justify-content: space-between;
-      margin: 1.2rem 0;
-    }
-
-    .role-select button {
-      width: 48%;
-      padding: 0.7rem;
-      font-weight: bold;
-      border: none;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      color: #230903;
-      transition: 0.3s ease;
-    }
-
-    #adminBtn {
-      order: 1;
-      background: #9ebc9f;
-    }
-
-    #adminBtn:hover {
-      background: #8aad8e;
-    }
-
-    #riderBtn {
-      order: 2;
-      background: #d3b88c;
-    }
-
-    #riderBtn:hover {
-      background: #c3a87c;
-    }
-
-    .login-btn {
+    input {
       width: 100%;
       padding: 0.8rem;
-      background: #230903;
-      color: #f4f2f3;
+      margin-bottom: 1rem;
+      border: 1px solid var(--mid-bg);
+      border-radius: 8px;
+      background: var(--light-bg);
+    }
+
+    button {
+      width: 48%;
+      padding: 0.8rem;
       border: none;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      font-weight: bold;
+      border-radius: 8px;
       cursor: pointer;
+      font-weight: 600;
+      color: var(--dark-bg);
       transition: 0.3s ease;
     }
 
-    .login-btn:hover {
-      background: #3c1a10;
+    .admin-btn {
+      background: var(--accent-green);
+    }
+
+    .rider-btn {
+      background: var(--accent-tan);
+    }
+
+    button:hover {
+      transform: translateY(-2px);
+      opacity: 0.9;
+    }
+
+    .button-group {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 0.5rem;
+    }
+
+    .error {
+      color: red;
+      font-size: 0.85rem;
+      margin-bottom: 0.5rem;
+      display: none;
     }
 
     @media (max-width: 480px) {
       .login-container {
         padding: 1.5rem;
       }
-      .login-container h1 {
-        font-size: 1.6rem;
+      button {
+        width: 48%;
+        font-size: 0.85rem;
       }
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h1>Delivery Portal Login</h1>
+    <h1>Delivery System Login</h1>
+    <p>Log in as Admin or Rider</p>
+    <div class="error" id="errorMsg">Invalid email or password</div>
 
-    <div class="input-group">
-      <label for="email">Email Address</label>
-      <input type="email" id="email" placeholder="Enter your email" />
-    </div>
-
-    <div class="input-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter your password" />
-    </div>
-
-    <div class="role-select">
-      <button id="adminBtn">Admin</button>
-      <button id="riderBtn">Rider</button>
-    </div>
-
-    <button class="login-btn" onclick="login()">Log In</button>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <div class="button-group">
+        <button type="button" class="admin-btn" onclick="login('admin')">Admin</button>
+        <button type="button" class="rider-btn" onclick="login('rider')">Rider</button>
+      </div>
+    </form>
   </div>
 
   <script>
-    let userRole = "";
+    function login(role) {
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const errorMsg = document.getElementById('errorMsg');
 
-    document.getElementById("riderBtn").addEventListener("click", () => {
-      userRole = "Rider";
-      alert("You selected Rider login");
-    });
+      // Temporary hardcoded credentials for admin
+      const validEmail = "john.otacanmorales@gmail.com";
+      const validPassword = "123456";
 
-    document.getElementById("adminBtn").addEventListener("click", () => {
-      userRole = "Admin";
-      alert("You selected Admin login");
-    });
-
-    function login() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      if (!userRole) {
-        alert("Please select Rider or Admin");
-        return;
-      }
-
-      if (!email || !password) {
-        alert("Please fill in both fields");
-        return;
-      }
-
-      if (userRole === "Admin") {
-        window.location.href = "admin.html";
-      } else {
-        window.location.href = "rider.html";
+      if (role === 'admin') {
+        if (email === validEmail && password === validPassword) {
+          window.location.href = "admin.html";
+        } else {
+          errorMsg.style.display = 'block';
+        }
+      } else if (role === 'rider') {
+        alert("Rider portal under construction.");
       }
     }
   </script>
