--- a/admin.html
+++ b/admin.html
@@ -21,93 +21,144 @@
     }
 
     body {
-      background: var(--light-bg);
-      padding: 2rem;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       min-height: 100vh;
+      background: var(--light-bg);
+      color: var(--dark-bg);
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 240px;
+      background: var(--dark-bg);
+      color: #fff;
+      padding: 2rem 1rem;
+    }
+
+    .sidebar h2 {
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    .sidebar button {
+      display: block;
+      width: 100%;
+      background: var(--accent-green);
+      color: var(--dark-bg);
+      border: none;
+      padding: 0.8rem;
+      margin-bottom: 1rem;
+      border-radius: 6px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .sidebar button:hover {
+      background: var(--accent-tan);
+      transform: translateY(-2px);
+    }
+
+    /* Main content */
+    .main {
+      flex: 1;
+      padding: 2rem;
     }
 
     h1 {
-      color: var(--dark-bg);
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .card {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 12px;
-      width: 100%;
-      max-width: 420px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      background: white;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
     }
 
     label {
-      color: var(--mid-bg);
       font-weight: 600;
-      display: block;
-      margin-bottom: 0.5rem;
+      color: var(--mid-bg);
     }
 
     input {
       width: 100%;
       padding: 0.8rem;
+      margin-bottom: 1rem;
       border-radius: 8px;
       border: 1px solid #ccc;
-      margin-bottom: 1rem;
       background: var(--light-bg);
     }
 
-    button {
-      width: 100%;
-      background: var(--accent-green);
-      color: var(--dark-bg);
-      font-weight: 600;
-      border: none;
-      border-radius: 8px;
-      padding: 0.9rem;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
-
-    button:hover {
-      background: var(--accent-tan);
-      transform: translateY(-2px);
-    }
-
     #result {
-      margin-top: 1.2rem;
+      margin-top: 1rem;
       background: var(--accent-tan);
       color: var(--dark-bg);
       font-weight: 500;
-      border-radius: 8px;
-      padding: 0.9rem;
-      text-align: center;
+      border-radius: 6px;
+      padding: 0.8rem;
       display: none;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      body {
+        flex-direction: column;
+      }
+      .sidebar {
+        width: 100%;
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Admin Dashboard</h1>
-  <div class="card">
-    <h2 style="color: var(--mid-bg); margin-bottom: 1rem;">Add Route</h2>
+  <div class="sidebar">
+    <h2>Admin Menu</h2>
+    <button onclick="showAddRoute()">➕ Add Route</button>
+    <button onclick="alert('Coming soon: Rider List')">👷 Rider List</button>
+    <button onclick="alert('Coming soon: Reports')">📊 Reports</button>
+  </div>
 
-    <label for="origin">Origin:</label>
-    <input type="text" id="origin" placeholder="Enter origin address" required />
+  <div class="main">
+    <h1>Welcome, Admin</h1>
 
-    <label for="destination">Destination:</label>
-    <input type="text" id="destination" placeholder="Enter destination address" required />
+    <!-- Default dashboard summary -->
+    <div id="dashboard">
+      <p>Select an option on the left to manage routes, riders, or reports.</p>
+    </div>
 
-    <button onclick="computeDistance()">Compute Fee</button>
+    <!-- Add Route Form -->
+    <div id="addRoute" class="hidden">
+      <div class="card">
+        <h2>Add Delivery Route</h2>
 
-    <div id="result"></div>
+        <label for="origin">Origin:</label>
+        <input type="text" id="origin" placeholder="Enter origin address" />
+
+        <label for="destination">Destination:</label>
+        <input type="text" id="destination" placeholder="Enter destination address" />
+
+        <button onclick="computeDistance()">Compute Fee</button>
+
+        <div id="result"></div>
+      </div>
+    </div>
   </div>
 
   <script>
+    function showAddRoute() {
+      document.getElementById("dashboard").classList.add("hidden");
+      document.getElementById("addRoute").classList.remove("hidden");
+    }
+
     function computeDistance() {
-      const origin = document.getElementById("origin").value;
-      const destination = document.getElementById("destination").value;
+      const origin = document.getElementById("origin").value.trim();
+      const destination = document.getElementById("destination").value.trim();
       const resultDiv = document.getElementById("result");
 
       if (!origin || !destination) {
@@ -130,13 +181,20 @@
             return;
           }
 
-          const distance = response.rows[0].elements[0].distance.value / 1000; // meters → km
-          const distanceText = response.rows[0].elements[0].distance.text;
+          const element = response.rows[0].elements[0];
+          if (element.status !== "OK") {
+            resultDiv.style.display = "block";
+            resultDiv.innerHTML = "⚠️ Unable to find distance. Check addresses.";
+            return;
+          }
 
-          // 💰 Fee formula
+          const distanceKm = element.distance.value / 1000;
+          const distanceText = element.distance.text;
+
+          // Fee formula
           const baseFee = 25;
-          const perKm = 10;
-          const fee = baseFee + distance * perKm;
+          const ratePerKm = 10;
+          const fee = baseFee + distanceKm * ratePerKm;
 
           resultDiv.style.display = "block";
           resultDiv.innerHTML = `
@@ -148,7 +206,7 @@
     }
   </script>
 
-  <!-- Load Google Maps API for Distance Matrix -->
+  <!-- ✅ Your Actual Google Maps API Key -->
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwm00tCv8XGJFxq5EbZut2CRKjMaXIJLg">
   </script>
