--- a/admin.html
+++ b/admin.html
@@ -27,7 +27,6 @@
       color: var(--dark-bg);
     }
 
-    /* Sidebar */
     .sidebar {
       width: 240px;
       background: var(--dark-bg);
@@ -59,14 +58,9 @@
       transform: translateY(-2px);
     }
 
-    /* Main content */
     .main {
       flex: 1;
       padding: 2rem;
-    }
-
-    h1 {
-      margin-bottom: 1rem;
     }
 
     .card {
@@ -74,7 +68,7 @@
       padding: 1.5rem;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
+      max-width: 700px;
     }
 
     label {
@@ -99,6 +93,25 @@
       border-radius: 6px;
       padding: 0.8rem;
       display: none;
+    }
+
+    .stop {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .stop input {
+      flex: 1;
+    }
+
+    .stop button {
+      background: crimson;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 0.4rem 0.7rem;
+      cursor: pointer;
     }
 
     .hidden {
@@ -127,23 +140,25 @@
   <div class="main">
     <h1>Welcome, Admin</h1>
 
-    <!-- Default dashboard summary -->
     <div id="dashboard">
       <p>Select an option on the left to manage routes, riders, or reports.</p>
     </div>
 
-    <!-- Add Route Form -->
     <div id="addRoute" class="hidden">
       <div class="card">
-        <h2>Add Delivery Route</h2>
+        <h2>Multi-Stop Route Planner</h2>
 
         <label for="origin">Origin:</label>
-        <input type="text" id="origin" placeholder="Enter origin address" />
+        <input type="text" id="origin" placeholder="Enter starting location" />
 
-        <label for="destination">Destination:</label>
-        <input type="text" id="destination" placeholder="Enter destination address" />
+        <div id="stops"></div>
 
-        <button onclick="computeDistance()">Compute Fee</button>
+        <button onclick="addStop()">➕ Add Stop</button>
+
+        <label for="destination">Final Destination:</label>
+        <input type="text" id="destination" placeholder="Enter final destination" />
+
+        <button onclick="computeRoute()">Compute Total Fee</button>
 
         <div id="result"></div>
       </div>
@@ -156,9 +171,27 @@
       document.getElementById("addRoute").classList.remove("hidden");
     }
 
-    function computeDistance() {
+    function addStop() {
+      const stopDiv = document.createElement("div");
+      stopDiv.className = "stop";
+      stopDiv.innerHTML = `
+        <input type="text" placeholder="Enter stop location" class="waypoint" />
+        <button onclick="removeStop(this)">✖</button>
+      `;
+      document.getElementById("stops").appendChild(stopDiv);
+    }
+
+    function removeStop(btn) {
+      btn.parentElement.remove();
+    }
+
+    function computeRoute() {
       const origin = document.getElementById("origin").value.trim();
       const destination = document.getElementById("destination").value.trim();
+      const waypoints = Array.from(document.querySelectorAll(".waypoint"))
+        .map(input => ({ location: input.value.trim(), stopover: true }))
+        .filter(wp => wp.location);
+
       const resultDiv = document.getElementById("result");
 
       if (!origin || !destination) {
@@ -167,38 +200,36 @@
         return;
       }
 
-      const service = new google.maps.DistanceMatrixService();
-      service.getDistanceMatrix(
+      const directionsService = new google.maps.DirectionsService();
+      directionsService.route(
         {
-          origins: [origin],
-          destinations: [destination],
-          travelMode: "DRIVING",
+          origin,
+          destination,
+          waypoints,
+          travelMode: google.maps.TravelMode.DRIVING,
         },
         (response, status) => {
           if (status !== "OK") {
             resultDiv.style.display = "block";
-            resultDiv.innerHTML = "❌ Error calculating distance.";
+            resultDiv.innerHTML = "❌ Error calculating route.";
             return;
           }
 
-          const element = response.rows[0].elements[0];
-          if (element.status !== "OK") {
-            resultDiv.style.display = "block";
-            resultDiv.innerHTML = "⚠️ Unable to find distance. Check addresses.";
-            return;
+          let totalDistance = 0;
+          const legs = response.routes[0].legs;
+
+          for (let i = 0; i < legs.length; i++) {
+            totalDistance += legs[i].distance.value;
           }
 
-          const distanceKm = element.distance.value / 1000;
-          const distanceText = element.distance.text;
-
-          // Fee formula
+          const distanceKm = totalDistance / 1000;
           const baseFee = 25;
           const ratePerKm = 10;
           const fee = baseFee + distanceKm * ratePerKm;
 
           resultDiv.style.display = "block";
           resultDiv.innerHTML = `
-            <strong>Distance:</strong> ${distanceText}<br>
+            <strong>Total Distance:</strong> ${distanceKm.toFixed(2)} km<br>
             <strong>Computed Fee:</strong> ₱${fee.toFixed(2)}
           `;
         }
@@ -206,9 +237,9 @@
     }
   </script>
 
-  <!-- ✅ Your Actual Google Maps API Key -->
+  <!-- Google Maps Directions API -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABBbwu3ehg4IXQYqOtz-txvNG4KYkj3ss">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwm00tCv8XGJFxq5EbZut2CRKjMaXIJLg&libraries=places">
   </script>
 </body>
 </html>
