--- a/admin.html
+++ b/admin.html
@@ -1,245 +1,23 @@
+<!-- admin.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard</title>
-  <style>
-    :root {
-      --dark-bg: #230903;
-      --mid-bg: #656256;
-      --accent-green: #9ebc9f;
-      --accent-tan: #d3b88c;
-      --light-bg: #f4f2f3;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
-
-    body {
-      display: flex;
-      min-height: 100vh;
-      background: var(--light-bg);
-      color: var(--dark-bg);
-    }
-
-    .sidebar {
-      width: 240px;
-      background: var(--dark-bg);
-      color: #fff;
-      padding: 2rem 1rem;
-    }
-
-    .sidebar h2 {
-      margin-bottom: 2rem;
-      text-align: center;
-    }
-
-    .sidebar button {
-      display: block;
-      width: 100%;
-      background: var(--accent-green);
-      color: var(--dark-bg);
-      border: none;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border-radius: 6px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
-
-    .sidebar button:hover {
-      background: var(--accent-tan);
-      transform: translateY(-2px);
-    }
-
-    .main {
-      flex: 1;
-      padding: 2rem;
-    }
-
-    .card {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      max-width: 700px;
-    }
-
-    label {
-      font-weight: 600;
-      color: var(--mid-bg);
-    }
-
-    input {
-      width: 100%;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      background: var(--light-bg);
-    }
-
-    #result {
-      margin-top: 1rem;
-      background: var(--accent-tan);
-      color: var(--dark-bg);
-      font-weight: 500;
-      border-radius: 6px;
-      padding: 0.8rem;
-      display: none;
-    }
-
-    .stop {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .stop input {
-      flex: 1;
-    }
-
-    .stop button {
-      background: crimson;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 0.4rem 0.7rem;
-      cursor: pointer;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
-      .sidebar {
-        width: 100%;
-        text-align: center;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <div class="sidebar">
     <h2>Admin Menu</h2>
-    <button onclick="showAddRoute()">➕ Add Route</button>
-    <button onclick="alert('Coming soon: Rider List')">👷 Rider List</button>
-    <button onclick="alert('Coming soon: Reports')">📊 Reports</button>
+    <a href="add-route.html" class="menu-btn">➕ Add Route</a>
+    <button class="menu-btn">👷 Rider List</button>
+    <button class="menu-btn">📊 Reports</button>
   </div>
 
   <div class="main">
     <h1>Welcome, Admin</h1>
-
-    <div id="dashboard">
-      <p>Select an option on the left to manage routes, riders, or reports.</p>
-    </div>
-
-    <div id="addRoute" class="hidden">
-      <div class="card">
-        <h2>Multi-Stop Route Planner</h2>
-
-        <label for="origin">Origin:</label>
-        <input type="text" id="origin" placeholder="Enter starting location" />
-
-        <div id="stops"></div>
-
-        <button onclick="addStop()">➕ Add Stop</button>
-
-        <label for="destination">Final Destination:</label>
-        <input type="text" id="destination" placeholder="Enter final destination" />
-
-        <button onclick="computeRoute()">Compute Total Fee</button>
-
-        <div id="result"></div>
-      </div>
-    </div>
+    <p>Select an option to manage routes, riders, or reports.</p>
   </div>
-
-  <script>
-    function showAddRoute() {
-      document.getElementById("dashboard").classList.add("hidden");
-      document.getElementById("addRoute").classList.remove("hidden");
-    }
-
-    function addStop() {
-      const stopDiv = document.createElement("div");
-      stopDiv.className = "stop";
-      stopDiv.innerHTML = `
-        <input type="text" placeholder="Enter stop location" class="waypoint" />
-        <button onclick="removeStop(this)">✖</button>
-      `;
-      document.getElementById("stops").appendChild(stopDiv);
-    }
-
-    function removeStop(btn) {
-      btn.parentElement.remove();
-    }
-
-    function computeRoute() {
-      const origin = document.getElementById("origin").value.trim();
-      const destination = document.getElementById("destination").value.trim();
-      const waypoints = Array.from(document.querySelectorAll(".waypoint"))
-        .map(input => ({ location: input.value.trim(), stopover: true }))
-        .filter(wp => wp.location);
-
-      const resultDiv = document.getElementById("result");
-
-      if (!origin || !destination) {
-        resultDiv.style.display = "block";
-        resultDiv.innerHTML = "⚠️ Please enter both origin and destination.";
-        return;
-      }
-
-      const directionsService = new google.maps.DirectionsService();
-      directionsService.route(
-        {
-          origin,
-          destination,
-          waypoints,
-          travelMode: google.maps.TravelMode.DRIVING,
-        },
-        (response, status) => {
-          if (status !== "OK") {
-            resultDiv.style.display = "block";
-            resultDiv.innerHTML = "❌ Error calculating route.";
-            return;
-          }
-
-          let totalDistance = 0;
-          const legs = response.routes[0].legs;
-
-          for (let i = 0; i < legs.length; i++) {
-            totalDistance += legs[i].distance.value;
-          }
-
-          const distanceKm = totalDistance / 1000;
-          const baseFee = 25;
-          const ratePerKm = 10;
-          const fee = baseFee + distanceKm * ratePerKm;
-
-          resultDiv.style.display = "block";
-          resultDiv.innerHTML = `
-            <strong>Total Distance:</strong> ${distanceKm.toFixed(2)} km<br>
-            <strong>Computed Fee:</strong> ₱${fee.toFixed(2)}
-          `;
-        }
-      );
-    }
-  </script>
-
-  <!-- Google Maps Directions API -->
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwm00tCv8XGJFxq5EbZut2CRKjMaXIJLg&libraries=places">
-  </script>
 </body>
 </html>
