--- a/add-route.html
+++ b/add-route.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Add Route</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+  <div class="sidebar">
+    <h2>Admin Menu</h2>
+    <a href="admin.html" class="menu-btn">⬅ Back to Dashboard</a>
+  </div>
+
+  <div class="main">
+    <div class="card">
+      <h2>Multi-Stop Route Planner</h2>
+
+      <label>Origin:</label>
+      <input type="text" id="origin" placeholder="Enter starting location">
+
+      <div id="stops"></div>
+
+      <button onclick="addStop()">➕ Add Stop</button>
+
+      <label>Destination:</label>
+      <input type="text" id="destination" placeholder="Enter final destination">
+
+      <button onclick="computeRoute()">Compute Fee</button>
+
+      <div id="result"></div>
+    </div>
+  </div>
+
+  <script>
+    function addStop() {
+      const div = document.createElement("div");
+      div.className = "stop";
+      div.innerHTML = `
+        <input type="text" placeholder="Enter stop location" class="waypoint" />
+        <button onclick="this.parentElement.remove()">✖</button>
+      `;
+      document.getElementById("stops").appendChild(div);
+    }
+
+    function computeRoute() {
+      const origin = document.getElementById("origin").value.trim();
+      const destination = document.getElementById("destination").value.trim();
+      const waypoints = Array.from(document.querySelectorAll(".waypoint"))
+        .map(i => ({ location: i.value.trim(), stopover: true }))
+        .filter(wp => wp.location);
+
+      const result = document.getElementById("result");
+      if (!origin || !destination) {
+        result.innerHTML = "⚠️ Please input origin and destination.";
+        return;
+      }
+
+      const directionsService = new google.maps.DirectionsService();
+      directionsService.route(
+        {
+          origin,
+          destination,
+          waypoints,
+          travelMode: google.maps.TravelMode.DRIVING,
+        },
+        (res, status) => {
+          if (status !== "OK") {
+            result.innerHTML = "❌ Error calculating route.";
+            return;
+          }
+
+          const legs = res.routes[0].legs;
+          let total = 0;
+          for (const leg of legs) total += leg.distance.value;
+          const km = total / 1000;
+          const fee = 25 + km * 10;
+
+          result.innerHTML = `
+            <p><strong>Total Distance:</strong> ${km.toFixed(2)} km</p>
+            <p><strong>Delivery Fee:</strong> ₱${fee.toFixed(2)}</p>
+          `;
+        }
+      );
+    }
+  </script>
+
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwm00tCv8XGJFxq5EbZut2CRKjMaXIJLg&libraries=places"></script>
+</body>
+</html>
 
