--- a/index.html
+++ b/index.html
@@ -3,143 +3,72 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Delivery System Login</title>
+  <title>Delivery Login</title>
   <style>
-    :root {
-      --dark-bg: #230903;
-      --mid-bg: #656256;
-      --accent-green: #9ebc9f;
-      --accent-tan: #d3b88c;
-      --light-bg: #f4f2f3;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
-
     body {
-      min-height: 100vh;
-      background: var(--light-bg);
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      color: white;
     }
-
     .login-container {
       background: white;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 15px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+      color: #111;
       padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      width: 300px;
       text-align: center;
     }
-
-    h1 {
-      color: var(--dark-bg);
-      margin-bottom: 1rem;
-    }
-
-    p {
-      color: var(--mid-bg);
-      font-size: 0.9rem;
-      margin-bottom: 1.5rem;
-    }
-
     input {
       width: 100%;
-      padding: 0.8rem;
-      margin-bottom: 1rem;
-      border: 1px solid var(--mid-bg);
+      margin: 10px 0;
+      padding: 10px;
       border-radius: 8px;
-      background: var(--light-bg);
+      border: 1px solid #ddd;
     }
-
     button {
-      width: 48%;
-      padding: 0.8rem;
+      width: 45%;
+      margin: 5px;
+      padding: 10px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      font-weight: 600;
-      color: var(--dark-bg);
-      transition: 0.3s ease;
+      color: white;
     }
-
-    .admin-btn {
-      background: var(--accent-green);
-    }
-
-    .rider-btn {
-      background: var(--accent-tan);
-    }
-
-    button:hover {
-      transform: translateY(-2px);
-      opacity: 0.9;
-    }
-
-    .button-group {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 0.5rem;
-    }
-
-    .error {
-      color: red;
-      font-size: 0.85rem;
-      margin-bottom: 0.5rem;
-      display: none;
-    }
-
-    @media (max-width: 480px) {
-      .login-container {
-        padding: 1.5rem;
-      }
-      button {
-        width: 48%;
-        font-size: 0.85rem;
-      }
-    }
+    .admin-btn { background-color: #4F46E5; }
+    .rider-btn { background-color: #10B981; float: right; }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h1>Delivery System Login</h1>
-    <p>Log in as Admin or Rider</p>
-    <div class="error" id="errorMsg">Invalid email or password</div>
-
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <div class="button-group">
-        <button type="button" class="admin-btn" onclick="login('admin')">Admin</button>
-        <button type="button" class="rider-btn" onclick="login('rider')">Rider</button>
-      </div>
-    </form>
+    <h2>Delivery Portal Login</h2>
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
+    <div>
+      <button class="admin-btn" onclick="login('admin')">Admin</button>
+      <button class="rider-btn" onclick="login('rider')">Rider</button>
+    </div>
+    <p id="error" style="color:red;"></p>
   </div>
 
   <script>
     function login(role) {
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const errorMsg = document.getElementById('errorMsg');
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const error = document.getElementById("error");
 
-      // Temporary hardcoded credentials for admin
-      const validEmail = "john.otacanmorales@gmail.com";
-      const validPassword = "123456";
-
-      if (role === 'admin') {
-        if (email === validEmail && password === validPassword) {
+      if (role === "admin") {
+        if (email === "john.otacanmorales@gmail.com" && password === "123456") {
           window.location.href = "admin.html";
         } else {
-          errorMsg.style.display = 'block';
+          error.textContent = "Invalid Admin Credentials";
         }
-      } else if (role === 'rider') {
-        alert("Rider portal under construction.");
+      } else if (role === "rider") {
+        alert("Rider panel under construction.");
       }
     }
   </script>
