--- a/admin.html
+++ b/admin.html
@@ -1,23 +1,47 @@
-<!-- admin.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f3f4f6;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #4F46E5;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    .container {
+      padding: 2rem;
+      text-align: center;
+    }
+    button {
+      padding: 10px 20px;
+      background: #10B981;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover { background: #059669; }
+  </style>
 </head>
 <body>
-  <div class="sidebar">
-    <h2>Admin Menu</h2>
-    <a href="add-route.html" class="menu-btn">➕ Add Route</a>
-    <button class="menu-btn">👷 Rider List</button>
-    <button class="menu-btn">📊 Reports</button>
-  </div>
+  <header>
+    <h1>Admin Dashboard</h1>
+  </header>
 
-  <div class="main">
-    <h1>Welcome, Admin</h1>
-    <p>Select an option to manage routes, riders, or reports.</p>
+  <div class="container">
+    <h2>Welcome, Admin</h2>
+    <p>Manage delivery routes below.</p>
+    <button onclick="window.location.href='add-route.html'">➕ Add Route</button>
   </div>
 </body>
 </html>
